--- a/week4/moreoncss/styles.css
+++ b/week4/moreoncss/styles.css
@@ -1,1 +1,126 @@
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
+header{
+
+    position: fixed;
+    top: 0;
+    border-left-style: 0;
+    width: 200;
+    background-color: blueviolet;
+
+}
+.logo{
+background-color: darkslategrey;
+color: deeppink;
+font-size: 40px;
+display: inline;
+margin-block: 20;
+line-height: 50px;
+}
+
+.nav{
+    background-color: forestgreen;
+    display: inline;
+    position:relative;
+    text-align:center;
+    top: 0;
+    float: right;
+
+}
+.navlinklist{
+    background-color: gainsboro;
+    text-decoration:none;
+    list-style: none;
+    padding: 0;
+    position: relative;
+    display: inline;
+    margin-left: 10px ;
+
+}
+.navlinklist li{
+    display: inline-block;
+}
+
+.navLinkList li a {
+    color: powderblue;
+    text-decoration: purple;
+    font-size: 20px;
+    padding: 10px;
+
+
+}
+color:
+
+
+.navlinklist {
+    background-color: plum;
+    border-color: hotpink;
+    text-decoration-style: dotted;
+    font: size 20px;
+    padding: 10px;
+    line-height: 50px;
+    display:inline-block;
+    margin-left: 20px;
+
+}
+
+
+.navlinklist li a:hover {
+background-color: cornsilk;
+}
+
+.mainBody{
+margin-top: 60px;
+width: 100;
+
+.resturant photo
+position: relative;
+display: inline-block;
+width: 20%;
+
+.resturtantphot0o image-rendering: 20px;
+width: 100%;
+
+.EnjoyQuote
+position: absolute;
+top: 10px;
+left: 15px;
+font: size 26px;
+color: green
+width: 60;
+font-family: 'Itim', cursive;
+}
+
+.recentPost {
+position: relative;
+display: block;
+width: 60%;
+background-color: khaki;
+vertical-align: middle;
+font-size: 20px;
+
+
+.recentPosts p{
+    margin: 30px 0;
+
+}
+
+.blogPostList{
+    position: relative;
+    display: inline;
+    width: 15%;
+    vertical-align: middle;
+    font-size: 18px;
+    border-color: 2px lightslategrey;
+    padding-top: 10px;
+
+
+}
+footer{
+    width: 100%;
+    text-align: center;
+    background-color: peachpuff;
+    padding: 10px;
+}
+
 
