--- a/week5/pp2/pause and prac.1/styles.css
+++ b/week5/pp2/pause and prac.1/styles.css
@@ -1,108 +1,186 @@
 /* changes */
    
-    .box {
-    min-height: 50px;
-    width: 100%;
-    margin-bottom: 768px;
-  
-}
-    .red {
-       
-        background-color: firebrick;
-    }
-    
-    .gridcontainer {
-    display:grid 50px;
-    grid-template-columns: repeat(4,25%);
-    
-}
-.gridcontainer div{
-font-size: 55px;
-padding: 20px;
+    * {
+        box-sizing: boarder-box;
 
-}
-
- .box {
-    min-height: 50px;
-    width: 100%;
-    margin-bottom: 768px;
-  
-}
-    
-    .box{
- min-height: 50px;   
-width: 100%;
-margin-bottom: 1px;
-}
-
-.blue {
-    
-    background-color: blue;
     }
 
-    .gridcontainer div{
-    display: grid 50px;
-    grid-template-columns: repeat(2,25%);
-    
-    
-     background-color: darkolivegreen;   
-    
-    }
-    .box {
-        min-height: 50px;
+    header{
+        position: fixed;
+        top: 0%;
+        left: 0%;
         width: 100%;
-        margin-bottom: 1px;
+        background-color: navy;
+        height: 70px;
     }
 
-
-    .orange {
-     background-color: orange;   
-    }
-    .gridcontainer {
-        display:grid 50px;
-        grid-template-columns: repeat(4,25%);
-    }
-    .gridcontainer {
-        display: grid;
-        gap: 1px;
-    grid-template-columns: 1fr;
-    }
     
-    @media screen and (max-width:400px) {
-    .gridcontainer{
-        grid-template-columns:repeat(12,1fr);
-     gap: 5px;
-     grid-template-rows: repeat(5,1fr);
+    .logo{
+color: orange;
+font-size: 30px;
+display: inline;
+margin-left: 70;
+
+}
+
+.nav{
+display: inline;
+position: relative;
+text-align: right;
+top: 0%;
+left: 0%;
+float:right;
+
+}
+
+.navLinkList li a{
+color:red;
+ text-decoration:none;
+list-style: none;
+padding: 0px;
+position: relative;
+display: inline;
+margin-right: 20px;
+}
+.navLinkList li a:hover{
+color:aqua;
+
+}
+.menu-prioty-high{
+display:inline-block
+}
+
+.menu-prioty-medium,.menu-prioty-low{
+    display: inline-block;
+}
+
+.main-{
+    margin-top: 90px
+}
+
+.box{
+    width: 10px;
+    margin: 10px 0px;
+    max-height: 100px;
+    padding: 10px;
+    display: inline-block;
+
+}
+
+.schedule{
+    background-color: darkviolet;
+    
+}
+.main{
+background-color: indigo;
+}
+.ad{
+    background-color: green;
+    }
+   @media screen and (mix-width: 100px) {
+    .schedule,.main{
+        float: right;
+    }
+    .schedule{
+        width: 20%;
+    }
+
+    .main{
+        width: calc(80%-10px);
+        margin-right: 10px;
+    }
+
+    .logo{
+    font-size: 80px;
+}
+  .navLinkList li a{
+padding: 40px;
+
+}
+.menu-prioty-medium{
+display: inline-block;
+}
+   
+@media screen and (max-width: 200px) {
+    .schedule,.ad{
+width: 20%;
+}
+
+.ad {
+    width: 15%;
+    margin-left: 10px;
+}
+
+.main{
+    width: calc(65%- 28px);
+}
+.menu-prioty-low{
+    display: inline-flex;
+}
+
+  
+}
+  
+.main {
+width: calc(80%-10px);
+margin-left: 10px;
+
+}
+.logo{
+    font-size: 40px;
+}
+.navLinkList li a{
+    padding: 20px;
+}
+.menu-prioty-medium{
+display: inlineLine-block;
+}
+
+
+        grid-template-colums :repeat>(12, 1fr);
      
+     grid-template-rows repeat(5,1fr);
 }
-#box1{
-grid-column-start:1 ;   
-grid-column-end: 13;
+*{
+     box-siziing: boarder-box
 
 }
 
-#box2{
+.mainaxis{
+background-color: seagreen;
+border: 2px;
+width: 80%;
+display: flex;
+}
+
+.mainaxis> div{
+    background-color: sienna;
+    width: 100px;
+    margin: 10px;
+    text-align:center ;
+    line-height: 75px;
+    font-size: 38px;
+    border: 1px teal;
+}
+.red{
+background-color:red;
+    flex-box: 100px;
+    grid-column-start: 1;
+    grid: column end 2px;: ;
+}
+.purple{}
+
+.box2>h1{
+    background-color: greenyellow;
+}
 grid-column-start: 1; 
 grid-column-end: 7;
 
 
 }
-#box3{
+.box3{
    grid-column-start: 7; 
 grid-column-end: 13 ;
-
-}
-
-#box4{
-    grid-column: 1/5;
-}
-
-#box5{
-grid-column: 5/9;
-
-}
-#box6 {
-    grid-column: 9/13;
 
 }
 
@@ -114,24 +192,6 @@ grid-column: 5/9;
             grid-template-columns: repeat(12,1fr);
             gap: 5px;
         }
-    #box1 {
-    grid-column-start: 1;
-    grid-column-end: 7
-    }
-    
-    #box2 {
-    grid-column-start: 7;
-    grid-column-end: 13
-    
-    
-    }
-    
-    #box3 {
-    grid-column-start: 1/5;
-    }
-        
-    #box4 {
-     grid-column-start: 5/9;
             
         
     }
@@ -152,18 +212,7 @@ grid-column: 5/9;
     min-height: 100px;
     padding: 10px;display: inline;
 }
-.schedule{
-    background-color: tomato;
-}
 
-.main{
-    background-color: blue;
-    color: darkturquoise;
-
-    border: 2px dashed green;
-}
-.box > h1 {
-    background-color: brown;
 }
 footer{
     width: 100%;
