--- a/week5/pp2/image2/styles.css
+++ b/week5/pp2/image2/styles.css
@@ -13,7 +13,7 @@ grid-gap:10px;
         width: 100%;
         padding-bottom: 40px;
         padding-top: 40px ;
-        grid-column: span 2;
+        grid-column: span 4;
 
     }
     
@@ -22,10 +22,9 @@ grid-gap:10px;
 background-color:blue;
 font-size: 20px;
 width: 100%;
-padding-bottom: 40px;
-padding-top: 40px ;
+height: 100%;
 grid-column: span 2;
-
+grid-row: span 2 ;
 }
 
 .green {
@@ -46,7 +45,7 @@ grid-column: span 2;
      width: 100%;
      padding-bottom: 40px;
     padding-top: 40px ;
-    grid-column: span 3;
+    grid-column: span 1;
 
  }
  .boxyellow{
@@ -57,7 +56,7 @@ grid-column: span 2;
      width: 100%;
      padding-bottom: 40px;
     padding-top: 40px ;
-    grid-column: span 4;
+    grid-column: span 1;
 
 }
 /* {@media screen and (mix-width:768 px) {
